--- a/.github/workflows/main_mockinterviewapp-backend-takashi01.yml
+++ b/.github/workflows/main_mockinterviewapp-backend-takashi01.yml
@@ -71,4 +71,7 @@ jobs:
           app-name: 'mockinterviewapp-backend-takashi01'
           slot-name: 'Production'
           package: .
+          enable-oryx-build: false         
+          scm-do-build-during-deployment: false 
+          
           
