--- a/.github/workflows/main_mockinterviewapp-backend-takashi01.yml
+++ b/.github/workflows/main_mockinterviewapp-backend-takashi01.yml
@@ -44,11 +44,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: 'Production' # This environment name must exactly match the "GitHub environment name" you configured in Azure Federated Credentials.
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write # This is required for requesting the JWT
-      contents: read # This is required for actions/checkout
+      id-token: write # This permission is crucial for OpenID Connect (OIDC) authentication.
+      contents: read
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -59,10 +59,11 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_DE95F72921FA45E9B291A934DD6F6ED75 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_3D8C02EEC437468194CDE7242E06C6E5 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_2893712FC95E4564961A934DD6F6ED75 }}
-          client-secret: ${{ secrets.AZUREAPPSERVICE_CLIENT_SECRET }} # THIS IS THE CRITICAL LINE ADDED!
+          # For OIDC authentication (due to 'id-token: write' permission),
+          # 'client-id', 'tenant-id', and 'client-secret' are NOT passed directly here.
+          # Azure AD's Federated Credentials handle the authentication based on the OIDC token.
+          # We only need to provide the subscription-id to the login action.
+          azure-subscription: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_2893712FC95E4564961A934DD6F6ED75 }}
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
