--- a/.github/workflows/main_mockinterviewapp-backend-takashi01.yml
+++ b/.github/workflows/main_mockinterviewapp-backend-takashi01.yml
@@ -44,10 +44,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production' # This environment name must exactly match the "GitHub environment name" you configured in Azure Federated Credentials.
+      name: 'Production' # This environment name is still important for environment protection rules and URL output.
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write # This permission is crucial for OpenID Connect (OIDC) authentication.
+      # The 'id-token: write' permission is not strictly needed for this Service Principal authentication method
+      # using 'creds', but leaving it won't cause issues. You could remove it for clarity if desired.
+      # id-token: write
       contents: read
     steps:
       - name: Download artifact from build job
@@ -59,11 +61,11 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          # For OIDC authentication (due to 'id-token: write' permission),
-          # 'client-id', 'tenant-id', and 'client-secret' are NOT passed directly here.
-          # Azure AD's Federated Credentials handle the authentication based on the OIDC token.
-          # We only need to provide the subscription-id to the login action.
-          azure-subscription: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_2893712FC95E4564961A934DD6F6ED75 }}
+          # This is the crucial change. We use the 'creds' input to pass the entire
+          # Service Principal JSON, which is stored in the AZURE_CREDENTIALS secret.
+          # This explicitly tells azure/login to use the traditional Service Principal method.
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          auth-type: SERVICE_PRINCIPAL # Explicitly state the authentication type.
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
