--- a/.github/workflows/main_mockinterviewapp-backend-takashi01.yml
+++ b/.github/workflows/main_mockinterviewapp-backend-takashi01.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           node-version: '18.x' # Set to 18.x to match your Azure App Service setting. You can test 22.x later if needed.
 
-      - name: npm install, build, and test
+      - name: npm install, build, and test # This step still runs local install for building/testing on GitHub runner
         run: |
           npm install
           npm run build --if-present
@@ -29,10 +29,10 @@ jobs:
 
       - name: Zip artifact for deployment
         run: |
-          # Zip the contents of the current directory (your repo root)
-          # This assumes package.json, server.js, node_modules etc., are at the root level of your Git repository.
-          # Exclude the .git directory and the workflow files themselves from the zip
-          zip -r release.zip . -x ".git/*" ".github/workflows/*"
+          # IMPORTANT CHANGE: Exclude node_modules from the zip. Azure will install them directly on the server.
+          # This ensures a clean installation of dependencies in the Azure environment.
+          # Also exclude any common development-only files or directories you don't need in production like .env files.
+          zip -r release.zip . -x ".git/*" ".github/workflows/*" "node_modules/*" ".env"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -44,10 +44,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production' # This environment name must exactly match the "GitHub environment name" you configured in Azure Federated Credentials.
+      name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write # This permission is crucial for OpenID Connect (OIDC) authentication.
       contents: read
     steps:
       - name: Download artifact from build job
@@ -59,16 +58,13 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          # For OIDC authentication (due to 'id-token: write' permission),
-          # 'client-id', 'tenant-id', and 'client-secret' are NOT passed directly here.
-          # Azure AD's Federated Credentials handle the authentication based on the OIDC token.
-          # We only need to provide the subscription-id to the login action.
-          azure-subscription: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_2893712FC95E4564961A934DD6F6ED75 }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          auth-type: SERVICE_PRINCIPAL
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
+        uses: azure/webapps-deploy@v2 # <-- ここを v2 に戻してください！
         with:
           app-name: 'mockinterviewapp-backend-takashi01'
           slot-name: 'Production'
-          package: . # Deploy the contents of the current directory (which is where the unzipped artifact resides)
-          # Important: Ensure 'enable-oryx-build' and 'scm-do-build-during-deployment' are NOT present here.
+          package: .
+          enable-oryx-build: true # この行は v2 でサポートされています
