added example.env again

--- a/example.env
+++ b/example.env
@@ -10,7 +10,7 @@ DB_CONNECTION_STRING=mongodb://<username>:<password>@<host>:<port>/<database_nam
 
 # Set NODE_ENV to 'production' when deploying to a production environment.
 # This helps frameworks like Express optimize performance and handle errors appropriately.
-
+NODE_ENV=development
 
 
 
