--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "test": "jest",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.11.0",
+    "@google/generative-ai": "^0.11.5",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.17.1",
-    "mongoose": "^8.4.1"
+    "dotenv": "^16.5.0",
+    "express": "^4.17.1",  
+    "mongoose": "^8.15.1"
   },
   "devDependencies": {
+    "jest": "^29.7.0",       
+    "supertest": "^7.1.1",   
     "nodemon": "^3.1.2"
   }
 }
