--- a/.github/workflows/main_mockinterviewapp-backend-takashi01.yml
+++ b/.github/workflows/main_mockinterviewapp-backend-takashi01.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: npm install, build, and test # This step still runs local install for building/testing on GitHub runner
         run: |
-          npm install
+          npm ci
           npm run build --if-present
           npm run test --if-present
 
