--- a/.github/workflows/main_mockinterviewapp-backend-takashi01.yml
+++ b/.github/workflows/main_mockinterviewapp-backend-takashi01.yml
@@ -26,6 +26,9 @@ jobs:
           npm ci
           npm run build --if-present
           npm run test --if-present
+        env: # <--- ADD THIS BLOCK HERE
+          DB_CONNECTION_STRING: ${{ secrets.DB_CONNECTION_STRING }}
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
 
       - name: Zip artifact for deployment
         run: |
@@ -68,5 +71,7 @@ jobs:
           slot-name: 'Production'
           package: .
           # IMPORTANT CHANGE: enable-oryx-build は削除します
-          # 代わりに startup-command を使って npm install と node server.js を実行します
-          startup-command: 'npm install && node server.js' # <-- この行を追加・修正します！
+          # Instead, use startup-command to run npm install and node server.js
+          startup-command: 'npm install && node server.js' # <-- Add or modify the line! Overwrite this and
+          # Also, ensure your Azure App Service's 'Configuration' -> 'Application settings'
+          # have DB_CONNECTION_STRING and GOOGLE_API_KEY set for runtime.
