changed server.js and yml file

--- a/.github/workflows/main_mockinterviewapp-backend-takashi01.yml
+++ b/.github/workflows/main_mockinterviewapp-backend-takashi01.yml
@@ -24,7 +24,7 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
-        env: 
+        env: # ここにenvブロックを追加し、シークレットを環境変数として渡します
           DB_CONNECTION_STRING: ${{ secrets.DB_CONNECTION_STRING }}
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
       - name: Zip artifact for deployment
@@ -60,7 +60,7 @@ jobs:
           auth-type: SERVICE_PRINCIPAL
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2 
+        uses: azure/webapps-deploy@v2 # v2のままです
         with:
           app-name: 'mockinterviewapp-backend-takashi01'
           slot-name: 'Production'
